<resources>
    <string name="app_name">Family Map</string>
    <string name="person_activity_name">Family Map: Person Details</string>
    <string name="settings_activity_name">Family Map: Settings</string>
    <string name="search_activity_name">Family Map: Search</string>
    
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    
    <string name="search_hint">Search in person name and in event country, city, type and year</string>
    
    <!-- Login Fragment Strings -->
    <string name="server_host_login_text">Server Host:</string>
    <string name="server_port_login_text">Server Port:</string>
    <string name="user_name_login_text">User Name:</string>
    <string name="password_login_text">Password:</string>
    <string name="first_name_login_text">First Name:</string>
    <string name="last_name_login_text">Last Name:</string>
    <string name="email_login_text">Email:</string>
    <string name="gender_login_text">Gender:</string>
    <string name="male_select">Male</string>
    <string name="female_select">Female</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    
    <!-- Map Fragment Strings -->
    <string name="default_event_description">Click on a marker to see event details</string>
    <string name="description_event_icon">Icon showing gender of the person select is for</string>
    <string name="description_event_marker">Icon showing the marker for the event type</string>
    
    <!-- Person Activity Strings -->
    <string name="error_no_person">ERROR: No person data</string>
    <string name="person_first_name_text">First Name</string>
    <string name="person_last_name_text">Last Name</string>
    <string name="person_gender_text">Gender</string>
    <string name="group_title_life_events">LIFE EVENTS</string>
    <string name="group_title_family">FAMILY</string>
    
    <!-- Settings Activity Strings -->
    <string name="life_story_title">Life Story Lines</string>
    <string name="life_story_description">SHOW LIFE STORY LINES</string>
    <string name="family_tree_title">Family Tree Lines</string>
    <string name="family_tree_description">SHOW FAMILY TREES LINES</string>
    <string name="spouse_title">Spouse Lines</string>
    <string name="spouse_description">SHOW SPOUSE LINES</string>
    <string name="father_side_title">Father\'s Side</string>
    <string name="father_side_description">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_side_title">Mother\'s Side</string>
    <string name="mother_side_description">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events_title">Male Events</string>
    <string name="male_events_description">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events_title">Female Events</string>
    <string name="female_events_description">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout_title">Logout</string>
    <string name="logout_description">RETURN TO LOGIN SCREEN</string>
</resources>